# aisf-project

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
data/: logs_loss_1.3.0all_runs.pkl  logs_loss_1.5.0all_runs.pkl  logs_loss_1.6.0all_runs.pkl  logs_loss_1.7.0all_runs.pkl  logs_loss_1.8.0all_runs.pkl  logs_loss_1.9.0all_runs.pkl  logs_loss_debug_0.pkl  logs_loss_debug_1.pkl  logs_loss_debug_2.pkl  logs_loss_debug_3.pkl  logs_loss_debug_4.pkl  logs_loss_debugall_runs  logs_loss_debugall_runs.pkl  logs_loss_v1.0.0_0.pkl  logs_loss_v1.0.0_1.pkl  logs_loss_v1.0.0_10.pkl  logs_loss_v1.0.0_100.pkl  logs_loss_v1.0.0_101.pkl  logs_loss_v1.0.0_102.pkl  logs_loss_v1.0.0_103.pkl  logs_loss_v1.0.0_104.pkl  logs_loss_v1.0.0_105.pkl  logs_loss_v1.0.0_106.pkl  logs_loss_v1.0.0_107.pkl  logs_loss_v1.0.0_108.pkl  logs_loss_v1.0.0_109.pkl  logs_loss_v1.0.0_11.pkl  logs_loss_v1.0.0_110.pkl  logs_loss_v1.0.0_111.pkl  logs_loss_v1.0.0_112.pkl  logs_loss_v1.0.0_113.pkl  logs_loss_v1.0.0_114.pkl  logs_loss_v1.0.0_115.pkl  logs_loss_v1.0.0_116.pkl  logs_loss_v1.0.0_117.pkl  logs_loss_v1.0.0_118.pkl  logs_loss_v1.0.0_119.pkl  logs_loss_v1.0.0_12.pkl  logs_loss_v1.0.0_120.pkl  logs_loss_v1.0.0_121.pkl  (+828 more)
models/: 20240515_logs_lossall_runs.pkl  logs_lossall_runs.pkl
notebooks/: 1.0-aa-tms-experiments.ipynb  1.1-aa-tms-experiments.ipynb  1.1-aa-tms-experiments_tassilo.ipynb  1.2-aa-tms-experiments.ipynb  1.3-aa-reproduce-original-results.ipynb  2.0-aa-visualize-experiments.ipynb  Exploring_Exact_Toy_Models.ipynb  plot-runs-with-biases.ipynb  (+7 more)
(+11 files in other folders)
